added logo and preloader

--- a/css/custom.css
+++ b/css/custom.css
@@ -268,7 +268,7 @@
 }
 
 #page_preloader {
-	background-image: url(../images/logo_footer.png);
+	background-image: url(../images/preloader.png);
 	background-position: center;
 	background-repeat: no-repeat;
 	position: fixed;
