changes in footer, contact and about

--- a/css/custom.css
+++ b/css/custom.css
@@ -916,7 +916,7 @@
 	background-color: #f9fafa ;
 }
 .vc_custom_1455041102295 {
-	background-image: url(../images/main_bg_1.jpg) ;
+	background-image: url(../images/bg_home_cup_go.png) ;
 	background-position: center ;
 	background-repeat: no-repeat ;
 	background-size: cover ;
